k8s-aks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app
          image: phoneregistry1.azurecr.io/spring-app:latest
          ports:
            - containerPort: 8090
